--- a/collection.html
+++ b/collection.html
@@ -48,7 +48,7 @@
 						<li><a class="nav-link scrollto" href="index.html#hero">Home</a></li>
 						<li><a class="nav-link active" href="collection.html">Collection</a></li>
 						<li><a class="nav-link scrollto" href="index.html#about">About</a></li>
-						<li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
+						<li><a class="nav-link scrollto" href="index.html#contact">Information</a></li>
 					</ul>
 					<i class="bi bi-list mobile-nav-toggle"></i>
 				</nav><!-- .navbar -->
@@ -649,6 +649,26 @@
 	</main><!-- End #main -->
 
 	<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+
+    <div class="container d-md-flex py-4">
+      <div class="me-md-auto text-center text-md-start">
+        <div class="copyright">
+          &copy; Copyright <strong><span>Baker</span></strong>. All Rights Reserved. Thank you BootstrapMade for providing a useful and beautiful website template, love and appreciated. This name also remind me of a nightmare when I study about bootstrap resampling, which is a simple Monte Carlo simulation to simulate the sample drawing of the data set (since in general, we only has <span style="color: #47b31d">a portion of data set</span> available to us, not <span style="color: #47b31d">an entire set of data</span> when we study about something). So that we can understand the reliability of our analysis if we use this incomplete data set to study about something.
+        </div>
+        <div class="credits">
+          <!-- All the links in the footer should remain intact. -->
+          <!-- You can delete the links only if you purchased the pro version. -->
+          <!-- Licensing information: https://bootstrapmade.com/license/ -->
+          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/baker-free-onepage-bootstrap-theme/ -->
+          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        </div>
+      </div>
+
+    </div>
+  </footer><!-- End Footer -->
 
 	<!-- Vendor JS Files -->
 	<script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
