--- a/collection.html
+++ b/collection.html
@@ -37,13 +37,16 @@
 
 <body>
 
-	<main id="main">
+	
+	<!--
 	<header id="header" class="fixed-top header-transparent">
+	-->
+	<header id="header" class="fixed-top ">
 		<div class="container d-flex align-items-center justify-content-between">
 
-			<h1 class="logo-collection"><a href="index.html">JOP</a></h1>
+			<h1 class="logo"><a href="index.html">JOP</a></h1>
 		  
-				<nav id="navbar" class="navbar-collection">
+				<nav id="navbar" class="navbar">
 					<ul>
 						<li><a class="nav-link scrollto" href="index.html#hero">Home</a></li>
 						<li><a class="nav-link active" href="collection.html">Collection</a></li>
@@ -56,10 +59,11 @@
 		</div>
 	  
 	</header>
+	
     <!-- ======= Portfolio Section ======= -->
+	<main id="main">
     <section id="portfolio" class="portfolio">
 		<div class="container">
-
 			<div class="section-title">
 				<h2>Collection</h2>
 				<p>All of my works so far.</p>
