--- a/collection.html
+++ b/collection.html
@@ -66,7 +66,7 @@
 		<div class="container">
 			<div class="section-title">
 				<h2>Collection</h2>
-				<p>All of my works so far.</p>
+				<p>All of my works so far. <b><a href="https://mega.nz/folder/HeBzBRID#DcR3YP4fl5akaj7Lw3D2fg">the folder</a></b></p>
 			</div>
 
 			<div class="row">
@@ -464,6 +464,17 @@
 				<p>
 				pdf: 
 				<a href="https://mega.nz/file/XGhzUZyS#uTLH5bonr6Axc6eFnj68lLvreVF39VP0I7ggzMp8ZLQ">raw
+				</a>
+				</p>
+			</div>
+
+			<div class="col-lg-4 col-md-6 portfolio-item filter-game">
+				<p>
+				Hare Nocchi Title - Hare Nocchi Kitto Nanohana Biyori
+				</p>
+				<p>
+				pdf: 
+				<a href="https://mega.nz/file/TWoB2LQK#D-0aIisXSh9byN5MKDkIWd9n4dnXtrHRSmOBlas_5Sw">raw
 				</a>
 				</p>
 			</div>
