--- a/collection.html
+++ b/collection.html
@@ -647,9 +647,9 @@
 				</p>
 				<p>
 				pdf: 
-				<a href="https://mega.nz/file/SDg2DTLR#KjXO6_3Lad02gKivd28YXdNXIGq8XtEnVnTHq72TNTA">raw
+				<a href="https://mega.nz/file/nOBgwL7Y#Z7fgMtbpTEOF0VTfHDW4S_BAZn7Ejc3791qwDiRfXqQ">raw
 				</a>|
-				<a href="https://mega.nz/file/Cfg0wYzT#Ri9Cwc6kKS312NhYqKBkeG_CksCHERUuE_eKXrbf7Ow">with comment
+				<a href="https://mega.nz/file/eeZw1LyK#kZ7-inIpTUC74utYWoa6zTFOmDHzUfHc8Yd_M2vfZvs">with comment
 				</a>
 				</p>
 			</div>
