--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
                 <p>
                   It is easy to produce a sound from a piano, <b><span style="color: #47b31d">just pressing a key</span></b>.
                 </p>
+				<p>
+				  This makes most beginners become unaware of their own <b><span style="color: #47b31d">bad habits that affect the sound quality</span></b> (some bad habits can also cause physical injury), since it is very easy to produce a nice sound from the piano.
+				</p>
               </div>
             </li>
 
