--- a/index.html
+++ b/index.html
@@ -161,16 +161,39 @@
 			  <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Study more about music from other instruments to <b><span style="color: #47b31d">expand your vision about music</span></b>.
+                  It is actually very simple, <b><span style="color: #47b31d">get rid of every bad habit and you will only be left with a good habit!</span></b> This is easier said than done since fixing bad habits requires discipline and it is a continuous progress, you need to remind about the bad habits and keep track in the back of your mind.
                 </p>
+				<p>
+				  It is a hassle in the beginning, but you will get used to it and <b><span style="color: #47b31d">the good habit will become your second nature</span></b>.
+				</p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="200">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">
-			  Why bother listening to other instrument? 
+			  My example of fixing a bad habit
 			  <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
+                <p>
+                  When I am practicing scale, I set up a mirror to monitor the shape and movement of my hand. I particularly focus on the wrist movement by trying to minimize the vertical movement of my wrist as much as possible. The reason is that if we only utilize the force from the finger to press a key, other parts of the arm should not be moving (note that they can bounced from reaction force when we press the key, but still, this force is very small).
+                </p>
+				<p>
+				  The reason I practice scale like this is because I want to improve the dexterity of my finger control, so that I have a better command of phrasing and voicing. 
+				</p>
+				<p>
+				  You should find out <b><span style="color: #47b31d">what you want to fix or improve</span></b>, then design your own practicing method and routine.
+				</p>
+				<p>
+				  Lastly, the mantra of instrument playing, <b><span style="color: #47b31d">DO NOT TENSE!</span></b> If you feel tense, it is a sign that you are doing something wrong. Try to figure out what is the problem and fix them.
+				</p>
+              </div>
+            </li>
+
+            <li data-aos="fade-up" data-aos-delay="300">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">
+			  How to learn from listening to other instrument? 
+			  <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   For example, you can listen to how a <b><span style="color: #47b31d">good singer</span></b> sings a song, how they <b><span style="color: #47b31d">breath and rest in-between paragraph</span></b>, then apply these concepts to your piano playing (when should we <b><span style="color: #47b31d">relax our wrist</span></b>, how should we <b><span style="color: #47b31d">divide between phrases</span></b>).
                 </p>
@@ -180,22 +203,22 @@
               </div>
             </li>
 
-            <li data-aos="fade-up" data-aos-delay="300">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">
+            <li data-aos="fade-up" data-aos-delay="400">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed">
 			  How to sound nice when playing a piano? 
 			  <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
+              <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   Before you can learn to produce a nice sound, first you should know what the <b><span style="color: #47b31d">definition of a nice sound</span></b> is. This means that I recommend <b><span style="color: #47b31d">practicing listening skills first to develop better playing skills</span></b>.
                 </p>
               </div>
             </li>
 
-            <li data-aos="fade-up" data-aos-delay="400">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed">
+            <li data-aos="fade-up" data-aos-delay="500">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-6" class="collapsed">
 			  Who have a nice sound? 
 			  <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
+              <div id="faq-list-6" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   <b><span style="color: #47b31d">Every soloist</span></b>, you can listen to any recording that you understand their playing or interpretation (not necessarily the whole piece, only partial is also fine) and apply those ideas to your own playing, you can listen to more than one soloist of course.
                 </p>
