--- a/collection.html
+++ b/collection.html
@@ -619,7 +619,7 @@
 				</p>
 				<p>
 				pdf: 
-				<a href="https://mega.nz/file/OTpxgRQC#ljHgnLC7SawwkcGv9J2FXB1ukTHofAsccykroa4OHF8">raw
+				<a href="https://mega.nz/file/mawmhZrY#xTpBulqVy0wOgz1MSACTiNiHEU1Q4yV-4Bf7xGxEt5w">raw
 				</a>|
 				<a href="https://mega.nz/file/KLxlhSBB#Vvmg-QJJeRiAkR6amei6NcI8dPK16_3q2Hk_YDfQhEM">with comment
 				</a>
