renew song generator

--- a/index_backup.html
+++ b/index_backup.html
@@ -17,12 +17,11 @@
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <!--
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  -->
+
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
@@ -142,10 +141,10 @@
         <div class="faq-list">
           <ul>
             <li data-aos="fade-up">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1" aria-expanded="true">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse collapsed" data-bs-target="#faq-list-1" aria-expanded="false">
 			  Why?
 			  <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
+              <div id="faq-list-1" class="collapse" data-bs-parent=".faq-list" style="">
                 <p>
                   It is easy to produce a sound from a piano, <strong><span style="color: #47b31d"><em>just</em> pressing a key</span></strong>.
                 </p>
@@ -159,7 +158,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed" aria-expanded="false">
 			  Road to master piano playing 
 			  <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
+              <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list" style="">
                 <p>
                   It is actually very simple, <strong><span style="color: #47b31d">get rid of every bad habit and you will only be left with a <em>good habit!</em></span></strong> This is easier said than done since fixing bad habits requires discipline and it is a continuous progress, you need to remind about the bad habits and keep track in the back of your mind.
                 </p>
@@ -173,7 +172,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed" aria-expanded="false">
 			  My example of fixing a bad habit
 			  <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
+              <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list" style="">
                 <p>
                   When I am practicing scale, I set up a mirror to monitor the shape and movement of my hand. I particularly focus on the wrist movement by trying to minimize the vertical movement of my wrist as much as possible. The reason is that if we only utilize the force from the finger to press a key, other parts of the arm should not be moving (note that they can bounced from reaction force when we press the key, but still, this force is very small).
                 </p>
@@ -193,7 +192,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed" aria-expanded="false">
 			  How to learn from listening to other instrument? 
 			  <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
+              <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list" style="">
                 <p>
                   For example, you can listen to how a <strong><span style="color: #47b31d">good singer</span></strong> sings a song, how they <strong><span style="color: #47b31d"><em>breath</em> and <em>rest</em> in-between paragraph</span></strong>, then apply these concepts to your piano playing (when should we <strong><span style="color: #47b31d"><em>relax</em> our wrist</span></strong>, how should we <strong><span style="color: #47b31d">divide between <em>phrases</em></span></strong>).
                 </p>
@@ -207,7 +206,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed" aria-expanded="false">
 			  How to sound nice when playing a piano? 
 			  <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
+              <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list" style="">
                 <p>
                   Before you can learn to produce a nice sound, first you should know what the <strong><span style="color: #47b31d"><em>definition</em> of a nice sound</span></strong> is. This means that I recommend <strong><span style="color: #47b31d">practicing <em>listening skills</em> first to develop better playing skills</span></strong>.
                 </p>
@@ -215,10 +214,10 @@
             </li>
 
             <li data-aos="fade-up" data-aos-delay="500">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-6" class="collapsed" aria-expanded="false">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-6" class="" aria-expanded="true">
 			  Who have a nice sound? 
 			  <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-6" class="collapse" data-bs-parent=".faq-list">
+              <div id="faq-list-6" class="collapse show" data-bs-parent=".faq-list" style="">
                 <p>
                   <strong><span style="color: #47b31d">Every <em>soloist</em></span></strong> and good artist, you can listen to any recording that you understand their interpretation and expression (not necessarily the whole piece, only partial is also fine) and apply those ideas to your own playing, you can listen to more than one soloist of course.
                 </p>
