--- a/song-list/collection.html
+++ b/song-list/collection.html
@@ -96,7 +96,19 @@
               Vocaloid: arrangement, transcription.
             </p>
           </div>
+		  
+		  <label for="sortOptions" style="
+			padding: 1rem 0 0 0;
+			font-size: 1.5rem;
+			color: #47b31d;">
+		  <strong>Sort by:</strong></label>
+          <select id="sortOptions" onchange="sortSongs()">
+          <option value="alphabetically">Alphabetically</option>
+          <option value="uploadDate" selected>Upload Date</option>
+		  </select>
+	
      <div class="row">
+
       <div class="col-lg-12 d-flex justify-content-center">
        <ul id="portfolio-flters">
         <li class="filter-active" data-filter="*">
@@ -115,6 +127,7 @@
          Vocaloid
         </li>
        </ul>
+	   
       </div>
      </div>
 	 
