--- a/song-list/collection.html
+++ b/song-list/collection.html
@@ -141,7 +141,7 @@
   </main>
   <!-- End #main -->
   <a class="back-to-top d-flex align-items-center justify-content-center" href="#">
-   <i class="bi bi-arrow-up-short">
+   <i class="bi bi-arrow-up-short">^
    </i>
   </a>
   <!-- ======= Footer ======= -->
