--- a/index.html
+++ b/index.html
@@ -269,7 +269,11 @@
     </div>
   </footer><!-- End Footer -->
 
-  <a href="index.html#" class="back-to-top d-flex align-items-center justify-content-center active"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="index.html#" class="back-to-top d-flex align-items-center justify-content-center active">
+    <i class="bi bi-arrow-up-short">
+	  ^
+    </i>
+  </a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
