--- a/song-list/collection.html
+++ b/song-list/collection.html
@@ -97,14 +97,12 @@
             </p>
           </div>
 		  
-		  <label for="sortOptions" style="
-			padding: 1rem 0 0 0;
-			font-size: 1.5rem;
-			color: #47b31d;">
-		  <strong>Sort by:</strong></label>
-          <select id="sortOptions" onchange="sortSongs()">
-          <option value="alphabetically">Alphabetically</option>
-          <option value="uploadDate" selected>Upload Date</option>
+		  <label for="sortOptions">
+		  <strong>Sort by:</strong>
+      </label>
+      <select id="sortOptions" onchange="sortSongs()">
+        <option value="alphabetically">Alphabetically</option>
+        <option value="uploadDate" selected>Upload Date</option>
 		  </select>
 	
      <div class="row">
